scala-cas as a separate module